# courtvision-ai

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_prediction_lookup_index.py  0003_analytical_entities.py  0004_source_health.py  0005_model_registry.py
apps/api/courtvision/: __init__.py  api.py  artifact_store.py  broadcast.py  config.py  database.py  e2e_server.py  export_openapi.py  fixtures.py  inference.py  ingest.py  ingestion_service.py  main.py  ml.py  model_contracts.py  model_registry.py  model_runtime.py  models.py  prediction_runtime.py  presenters.py  rate_limit.py  replay.py  repository.py  schemas.py  seed.py  sources.py  worker.py
apps/api/tests/: conftest.py  test_api.py  test_artifact_store.py  test_broadcast.py  test_config.py  test_contracts.py  test_e2e_server.py  test_inference.py  test_ingestion.py  test_ml.py  test_model_registry.py  test_public_deployment_state.py  test_rate_limit.py  test_replay.py  test_security_headers.py  test_sources.py  test_worker_redis_integration.py
apps/ios/: README.md  project.yml
apps/ios/CourtVision.xcodeproj/: project.pbxproj
apps/web/: Dockerfile  eslint.config.mjs  next.config.test.ts  next.config.ts  package.json  playwright.config.ts  vercel.json  vitest.config.ts
contracts/: README.md  openapi.json  websocket-envelope.schema.json
docs/: deployment.md  ios-visual-acceptance.md
ml/: pyproject.toml
ml/courtvision_ml/: __init__.py  evaluation.py  train.py
ml/tests/: test_evaluation.py
tools/: check_deployment_readiness.py  check_ios_rest_contract.py  check_ios_websocket_contract.py  check_public_deployment_state.py
(+36 files in other folders)
