[project]
name = "courtvision-ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.4",
  "numpy>=2.1",
  "pandas>=2.2",
  "pyarrow>=18.1",
  "scikit-learn>=1.6"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["courtvision_ml"]
