[project]
name = "courtvision-api"
version = "0.1.0"
description = "Replay-first basketball analytics API"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14",
  "aiosqlite>=0.20",
  "asyncpg>=0.30",
  "boto3>=1.35",
  "fastapi>=0.115",
  "httpx>=0.28",
  "joblib>=1.4",
  "pandas>=2.2",
  "pydantic-settings>=2.7",
  "redis>=5.2",
  "scikit-learn>=1.6",
  "sqlalchemy[asyncio]>=2.0",
  "structlog>=24.4",
  "uvicorn[standard]>=0.34"
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.23",
  "mypy>=1.14",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pyyaml>=6.0",
  "ruff>=0.9"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["courtvision"]
